tests/errors/interface_missing.err
Type Error: Implementation `foo<int>` does not implement the following virtual functions:
1) f

On file `tests/errors/interface_missing.vrv` at 5:16
5: implementation foo<int> {
                  ^
